--- a/docs/scss/styles.scss
+++ b/docs/scss/styles.scss
@@ -24,6 +24,9 @@ header {
   margin: 0 auto;
   justify-content: space-between;
   align-items: center;
+  @include pc {
+    max-width: 1280px;
+  }
   .header-logo {
     font-size: 24px;
   }
@@ -150,6 +153,7 @@ main {
   align-items: center;
   height: 350px;
   @include pc {
+    max-width: 1280px;
     width: 90%;
     margin: 0 auto;
   }
@@ -206,6 +210,9 @@ h1 {
   width: 80%;
   margin: 0 auto;
   padding-top: 40px;
+  @include pc {
+    max-width: 1024px;
+  }
   .work-wrap {
     text-align: center;
     @include pc {
@@ -242,6 +249,9 @@ h1 {
   padding-top: 40px;
   width: 80%;
   margin: 0 auto;
+  @include pc {
+    max-width: 1024px;
+  }
   .profile-wrap {
     @include pc {
       margin: 0 auto;
@@ -317,6 +327,10 @@ footer {
     margin: 0 auto;
     position: relative;
     top: 15px;
+    @include pc {
+      max-width: 1024px;
+      margin: 0 auto;
+    }
     .footer-link {
       display: flex;
       justify-content: flex-start;
@@ -361,12 +375,18 @@ footer {
   padding: 30px 0 10px;
   border-bottom: 2px solid #333333;
   vertical-align: middle;
+  @include pc {
+    max-width: 768px;
+  }
 }
 
 .work-page-content {
   width: 60%;
   margin: 0 auto;
   text-align: center;
+  @include pc {
+    max-width: 768px;
+  }
   img {
     width: 100%;
     padding: 20px 0;
@@ -380,14 +400,27 @@ footer {
 
 
 .slide-show {
+  width: 100%;
+  height: 150px;
+  @include pc {
+    max-width: 1280px;
+    margin: 0 auto;
+    height: 400px;
+  }
   #list {
     position: absolute;
     overflow: hidden;
     background-color: black;
+    @include pc {
+      max-width: 1280px;
+      margin: 0 auto;
+    }
     .item {
       transition: opacity 2s linear, transform 5s linear;
       opacity: 0;
       transform: scale(1);
+      margin: 0 auto;
+      text-align: center;
       &:first-child {
         position: relative;
       }
@@ -409,7 +442,7 @@ footer {
       height: 150px;
       object-fit: cover;
       @include pc {
-        height: 300px;
+        height: 400px;
       }
     }
   }
@@ -418,12 +451,8 @@ footer {
 
 .my-profile-content {
   position: relative;
-  top: 150px;
   background-color: #fffdee;
   padding-bottom: 20px;
-  @include pc {
-    top: 300px;
-  }
   .my-profile-main {
     width: 80%;
     margin: 0 auto;
@@ -492,6 +521,7 @@ footer {
     width: 80%;
     margin: 0 auto;
     padding-top: 20px;
+    max-width: 1024px;
   }
 }
 
@@ -523,6 +553,8 @@ footer {
   .individual {
     width: 30%;
     text-align: center;
+    display: flex;
+    flex-direction: column;
   }
 }
 
@@ -533,6 +565,7 @@ footer {
   margin: 0 auto;
   @include pc {
     width: 60%;
+    max-width: 768px;
   }
   .history-text {
     color: #24AAC2;
@@ -558,13 +591,5 @@ footer {
   width: 65%;
   margin-left: auto;
   margin-right: 0;
-  }
-}
-
-footer.my-profile__footer {
-  position: relative;
-  top: 130px;
-  @include pc {
-    top: 280px;
   }
 }
